<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">股帐</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="export_data">导出</string>
    <string name="import_data">导入</string>
    <string name="stock_deal">股票交易</string>
    <string name="stock_deal_record_list">交易历史</string>
    <string name="transfer_record_list">转账历史</string>
    <string name="add_stock">添加股票</string>
    <string name="keep_stock_list">持仓列表</string>
    <string name="stock_list">股票列表</string>
    <string name="name">名称</string>
    <string name="code">代码</string>
    <string name="number">数量</string>
    <string name="total_transfer_in">总转入</string>
    <string name="total_investment">总投入</string>
    <string name="total_assets">总资产</string>
    <string name="total_transfer_out">总转出</string>
    <string name="transfer">转帐</string>
    <string name="transfer_in">转入</string>
    <string name="transfer_out">转出</string>
    <string name="stock_value">持仓</string>
    <string name="compute">计算</string>
    <string name="total_stock_value">总持仓</string>
    <string name="total_revenue">总收益</string>
    <string name="transfer_type">转账类型</string>
    <string name="deal_type">交易类型</string>
    <string name="deal_stock">交易股票</string>
    <string name="money">金额</string>
    <string name="value">价格</string>
    <string name="total_value">总价值</string>
    <string name="date">日期</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="msg_data_import_now">正在导入数据。。。</string>
    <string name="msg_data_export_now">正在导出数据。。。</string>
    <string name="msg_data_import_success">数据导入成功！</string>
    <string name="msg_data_import_fail">数据导入失败！</string>
    <string name="msg_data_export_success">数据导出成功！</string>
    <string name="msg_data_export_fail">数据导出失败！</string>
    <string name="msg_add_success">添加成功！</string>
    <string name="msg_add_fail">添加失败！</string>
    <string name="msg_value_can_not_be_zero">金额不能为零！</string>
    <string name="msg_number_can_not_be_zero">金额不能为零！</string>
    <string name="msg_stock_name_can_not_be_empty">股票名称不能为空！</string>
    <string name="msg_stock_code_can_not_be_empty">股票代码不能为空！</string>
    <string name="msg_no_deal_stock">请选择要交易的股票！</string>
    <string name="date_picker">时间选择器</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="stock">股票</string>
    <string name="gain">盈利</string>
    <string name="loss">亏损</string>
    <string name="zero">0</string>
    <string name="percent">百分比</string>
    <string name="two_percent">2%</string>
    <string name="three_percent">3%</string>
    <string name="four_percent">4%</string>
    <string name="five_percent">5%</string>
    <string name="six_percent">6%</string>
    <string name="eight_percent">8%</string>
    <string name="ten_percent">10%</string>

</resources>