<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding" >

    <EditText
        android:id="@+id/input_value_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_percent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_percent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/gain" />

            <TextView
                android:id="@+id/gain_two_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_three_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_four_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_five_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_six_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_eight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/gain_ten_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loss" />

            <TextView
                android:id="@+id/loss_two_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_three_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_four_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_five_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_six_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_eight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/loss_ten_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>