<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            style="@style/tableLable"
            android:text="@string/transfer_type" />

        <Spinner
            android:id="@+id/transfer_type_spinner"
            style="@style/tableInput"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" >

        <TextView
            style="@style/tableLable"
            android:text="@string/money" />

        <EditText
            android:id="@+id/transfer_money_editText"
            style="@style/tableInput"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical" >

        <TextView
            style="@style/tableLable"
            android:text="@string/date" />

        <TextView
            android:id="@+id/transfer_date_textView"
            style="@style/tableInput" />

        <TextView
            android:id="@+id/transfer_time_textView"
            style="@style/tableInput" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit" />

</LinearLayout>