<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_investment"
                android:textColor="@color/red"
                android:textSize="@dimen/important_text_size" />

            <TextView
                android:id="@+id/txt_total_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                android:textColor="@color/yellow"
                android:textSize="@dimen/important_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_stock_value"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sub_important_text_size" />

                <TextView
                    android:id="@+id/txt_total_stock_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5000"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sub_important_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_revenue"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sub_important_text_size" />

                <TextView
                    android:id="@+id/txt_total_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sub_important_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_transfer_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_main"
                android:text="@string/transfer_in"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btn_transfer_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_main"
                android:text="@string/transfer_out"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_stock_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_main"
                android:text="@string/stock_value"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btn_compute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_main"
                android:text="@string/compute"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>